--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ install:
   - pip3 install --upgrade pip  # all three OSes agree about 'pip3'
 # 'python' points to Python 2.7 on macOS but points to Python 3.7 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
-  - pip3 install pygpc/
+  - pip3 install -r requirements.txt
+  - pip3 install .
 
 # command to run tests
 script: pytest
