--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,9 @@ branches:
     - master
 
 environment:
+  
+  TWINE_USERNAME: pygpc
+  
   matrix:
     - PYTHON: "C:\\Python36"
       PYTHON_VERSION: "3.6"
@@ -44,13 +47,15 @@ install:
      %CMD_IN_ENV%
      python -c "import sys,platform,struct;
      print(sys.platform, platform.machine(), struct.calcsize('P') * 8, )"
-build_script:
-  - python -m pip install cibuildwheel twine cython numpy
+
+  build_script:
+  - python -m pip install cibuildwheel twine cython numpy pytest
   - python setup.py build_ext --inplace
   - python -m pip install .
 
 test_script:
   - cibuildwheel --output-dir wheelhouse
+  - twine upload "wheelhouse\\*.whl" & exit 0
 
 artifacts:
   - path: "wheelhouse\\*.whl"
