--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,9 @@ branches:
     - master
 
 environment:
+  
+  TWINE_USERNAME: pygpc
+  
   matrix:
     - PYTHON: "C:\\Python36"
       PYTHON_VERSION: "3.6"
@@ -45,12 +48,13 @@ install:
      python -c "import sys,platform,struct;
      print(sys.platform, platform.machine(), struct.calcsize('P') * 8, )"
 build_script:
-  - python -m pip install cibuildwheel twine cython numpy
+  - python -m pip install cibuildwheel twine cython numpy pytest
   - python setup.py build_ext --inplace
   - python -m pip install .
 
 test_script:
   - cibuildwheel --output-dir wheelhouse
+  - python -m twine upload wheelhouse/*.whl
 
 artifacts:
   - path: "wheelhouse\\*.whl"
