- Modified setup.py for deployment

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,8 +54,8 @@ build_script:
   - python -m pip install .
 
 test_script:
-  - cibuildwheel --output-dir wheelhouse
-  - twine upload "wheelhouse\\*.whl" & exit 0
+  - python -m cibuildwheel --output-dir wheelhouse
+  - python -m twine upload "wheelhouse\\*.whl" & exit 0
 
 artifacts:
   - path: "wheelhouse\\*.whl"
