--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,8 @@ before_install: |
     source venv/bin/activate
     # A manual check that the correct version of Python is running.
     python --version
+  elif [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    export CPATH=$CPATH:/usr/include/freetype2
   fi
 
 install:
