--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,8 @@ before_install: |
     # A manual check that the correct version of Python is running.
     python --version
   elif [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    sudo apt-get update
+    sudo apt-get install libfreetype6
     export CPATH=$CPATH:/usr/include/freetype2
   fi
 
