--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,6 @@ script: |
     cibuildwheel --output-dir wheelhouse
     twine upload wheelhouse/*.whl
   else
-    python setup.py sdist
+    python setup.py sdist bdist_wheel
     twine upload dist/*
   fi
