--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,11 @@ before_install: |
     source venv/bin/activate
     # A manual check that the correct version of Python is running.
     python --version
+  elif [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    sudo apt-get update
+    sudo apt-get install libpng-devel freetype-devel
+    export CFLAGS='-I/usr/include/freetype2/ft2build.h'
+    export LDFLAGS='-L/usr/lib/x86_64-linux-gnu/libfreetype.so'
   fi
 
 install:
@@ -58,11 +63,11 @@ install:
   - python setup.py build_ext --inplace
   - pip install .
 
-script: |
-  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-    cibuildwheel --output-dir wheelhouse
-    twine upload wheelhouse/*.whl
-  else
-    python setup.py sdist bdist_wheel
-    twine upload dist/*
-  fi
+script:
+  - cibuildwheel --output-dir wheelhouse
+  - twine upload wheelhouse/*.whl 
+  - |
+    if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
+      python setup.py sdist
+      twine upload dist/*
+    fi
