--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ before_install: |
     python --version
   elif [ "$TRAVIS_OS_NAME" == "linux" ]; then
     sudo apt-get update
-    sudo apt-get install libpng-devel freetype-devel
+    sudo apt-get install libpng-dev libfreetype6-dev
     export CFLAGS='-I/usr/include/freetype2/ft2build.h'
     export LDFLAGS='-L/usr/lib/x86_64-linux-gnu/libfreetype.so'
   fi
