--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ before_install: |
   elif [ "$TRAVIS_OS_NAME" == "linux" ]; then
     sudo apt-get update
     sudo apt-get install libpng-dev libfreetype6-dev
+    ln -s /usr/include/freetype2/ft2build.h /usr/include/
     export CFLAGS='-I/usr/include/freetype2/ft2build.h'
     export LDFLAGS='-L/usr/lib/x86_64-linux-gnu/libfreetype.so'
   fi
