- [Fixed] CI bugfix

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,23 +53,19 @@ before_install: |
     python --version
   elif [ "$TRAVIS_OS_NAME" == "linux" ]; then
     sudo apt-get update
-    sudo apt-get install libpng-dev libfreetype6-dev pkg-config freetype
+    sudo apt-get install libpng-dev libfreetype6-dev pkg-config freetype python-matplotlib
     sudo ln -s /usr/include/freetype2/ft2build.h /usr/include/
     export CFLAGS='-I/usr/include/freetype2/ft2build.h'
     export LDFLAGS='-L/usr/lib/x86_64-linux-gnu/libfreetype.so'
   fi
 
 install:
-  - |
-    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      sudo ln -s /usr/include/freetype2/ft2build.h /usr/include/
-    fi
   - pip install cython numpy pytest twine cibuildwheel
   - python setup.py build_ext --inplace
   - pip install .
 
 script:
-  - cibuildwheel --output-dir wheelhouse
+  - sudo cibuildwheel --output-dir wheelhouse
   - twine upload wheelhouse/*.whl 
   - |
     if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
