--- a/.travis.yml
+++ b/.travis.yml
@@ -65,8 +65,8 @@ install:
   - pip install .
 
 script:
-  - sudo python -m cibuildwheel --output-dir wheelhouse
-  - python -m twine upload wheelhouse/*.whl 
+  - cibuildwheel --output-dir wheelhouse
+  - twine upload wheelhouse/*.whl 
   - |
     if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
       python setup.py sdist
