--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,68 @@
-notifications:
-  email: false
+language: python
+os: linux
+sudo: required
+
+branches:
+  only:
+    - master
+
+env:
+  global:
+    - CIBW_BEFORE_BUILD="{pip} install cython numpy"
 
 matrix:
   include:
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
-           PLAT=manylinux1_x86_64
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
-           PRE_CMD=linux32
-           PLAT=manylinux1_i686
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
-           PLAT=manylinux2010_x86_64
+    - python: '3.7'
+      dist: xenial
+      sudo: true
+      env: CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
+    - python: '3.6'
+      env: CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
+    - os: osx
+      language: generic
+      env:
+        - PYTHON=3.7
+        - CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
+    - os: osx
+      language: generic
+      env:
+        - PYTHON=3.6
+        - CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
+
+before_install: |
+  # macOSX CI environment configuration: https://pythonhosted.org/CodeChat/.travis.yml.html
+  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    brew update
+    # Per the `pyenv homebrew recommendations <https://github.com/yyuu/pyenv/wiki#suggested-build-environment>`_.
+    brew install openssl readline
+    # See https://docs.travis-ci.com/user/osx-ci-environment/#A-note-on-upgrading-packages.
+    # I didn't do this above because it works and I'm lazy.
+    brew outdated pyenv || brew upgrade pyenv
+    # virtualenv doesn't work without pyenv knowledge. venv in Python 3.3
+    # doesn't provide Pip by default. So, use `pyenv-virtualenv <https://github.com/yyuu/pyenv-virtualenv/blob/master/README.md>`_.
+    brew install pyenv-virtualenv
+    pyenv install $PYTHON
+    # I would expect something like ``pyenv init; pyenv local $PYTHON`` or
+    # ``pyenv shell $PYTHON`` would work, but ``pyenv init`` doesn't seem to
+    # modify the Bash environment. ??? So, I hand-set the variables instead.
+    export PYENV_VERSION=$PYTHON
+    export PATH="/Users/travis/.pyenv/shims:${PATH}"
+    pyenv-virtualenv venv
+    source venv/bin/activate
+    # A manual check that the correct version of Python is running.
+    python --version
+  fi
 
 install:
-  - docker pull $DOCKER_IMAGE
+  - pip install cython numpy pytest twine cibuildwheel
+  - python setup.py build_ext --inplace
+  - pip install .
 
 script:
-  - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
-  - ls wheelhouse/
+  - cibuildwheel --output-dir wheelhouse
+  - twine upload wheelhouse/*.whl 
+  - |
+    if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
+      python setup.py sdist
+      python -m twine upload dist/*
+    fi
