--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ install:
   - pip install .
 
 script:
+  - pytest
   - cibuildwheel --output-dir wheelhouse
   - twine upload wheelhouse/*.whl 
   - |
