- [CHANGED] .travis.yml .appveyor.yml: No release

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,11 +59,12 @@ install:
   - pip install .
 
 script:
+  - pip install matplotlib
   - pytest
-  - cibuildwheel --output-dir wheelhouse
-  - twine upload wheelhouse/*.whl 
-  - |
-    if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
-      python setup.py sdist
-      python -m twine upload dist/*
-    fi
+#  - cibuildwheel --output-dir wheelhouse
+#  - twine upload wheelhouse/*.whl 
+#  - |
+#    if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
+#      python setup.py sdist
+#      python -m twine upload dist/*
+#    fi
