--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -47,7 +47,8 @@ install:
      print(sys.platform, platform.machine(), struct.calcsize('P') * 8, )"
 
 build_script:
-  - python -m pip install cibuildwheel twine cython numpy pytest
+  - python -m pip install -r requirements.txt
+  - python -m pip install cibuildwheel twine pytest
   - python setup.py build_ext --inplace
   - python -m pip install .
 
