- [Fixed] .travis.yml: numpy installation on osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,17 +23,17 @@ matrix:
     - os: osx
       language: generic
       env:
-        - PYTHON=3.7
+        - PYTHON=3.7.4
         - CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
     - os: osx
       language: generic
       env:
-        - PYTHON=3.6
+        - PYTHON=3.6.9
         - CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
     - os: osx
       language: generic
       env:
-        - PYTHON=3.5
+        - PYTHON=3.5.7
         - CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
 
 before_install: |
@@ -41,7 +41,8 @@ before_install: |
   if [ "$TRAVIS_OS_NAME" == "osx" ]; then
     brew update
     # Per the `pyenv homebrew recommendations <https://github.com/yyuu/pyenv/wiki#suggested-build-environment>`_.
-    brew install openssl readline numpy
+    brew install openssl readline
+    brew upgrade numpy
     # See https://docs.travis-ci.com/user/osx-ci-environment/#A-note-on-upgrading-packages.
     # I didn't do this above because it works and I'm lazy.
     brew outdated pyenv || brew upgrade pyenv
@@ -61,13 +62,17 @@ before_install: |
   fi
 
 install:
-  - pip install pytest twine cibuildwheel cython numpy
-  - python setup.py build_ext --inplace
-  - pip install .
+  - python3 -m pip install pytest twine cibuildwheel cython numpy
+  - |
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      python3 -m pip numpy>=1.16.4
+    fi
+  - python3 setup.py build_ext --inplace
+  - python3 -m pip install .
 
 script:
-  - pip install matplotlib
-  - pytest
+  - python3 -m pip install matplotlib
+  - python3 -m pytest
 #  - cibuildwheel --output-dir wheelhouse
 #  - twine upload wheelhouse/*.whl 
 #  - |
