--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,23 +5,23 @@ branches:
 environment:
   
   matrix:
-    - PYTHON: "C:\\Python35"
+    #- PYTHON: "C:\\Python35"
+      #PYTHON_VERSION: "3.5"
+      #PYTHON_ARCH: "32"
+      #CONDA_PY: "35"
+      #CIBW_SKIP: 'cp[!3]?-* cp3[!5]-*'
+
+    - PYTHON: "C:\\Python35-x64"
       PYTHON_VERSION: "3.5"
-      PYTHON_ARCH: "32"
-      CONDA_PY: "35"
-      CIBW_SKIP: 'cp[!3]?-* cp3[!5]-*'
-
-    - PYTHON: "C:\\Python36-x64"
-      PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "64"
       CONDA_PY: "35"
       CIBW_SKIP: 'cp[!3]?-* cp3[!5]-*'
 
-    - PYTHON: "C:\\Python36"
-      PYTHON_VERSION: "3.6"
-      PYTHON_ARCH: "32"
-      CONDA_PY: "36"
-      CIBW_SKIP: 'cp[!3]?-* cp3[!6]-*'
+    #- PYTHON: "C:\\Python36"
+      #PYTHON_VERSION: "3.6"
+      #PYTHON_ARCH: "32"
+      #CONDA_PY: "36"
+      #CIBW_SKIP: 'cp[!3]?-* cp3[!6]-*'
 
     - PYTHON: "C:\\Python36-x64"
       PYTHON_VERSION: "3.6"
@@ -29,11 +29,11 @@ environment:
       CONDA_PY: "36"
       CIBW_SKIP: 'cp[!3]?-* cp3[!6]-*'
 
-    - PYTHON: "C:\\Python37"
-      PYTHON_VERSION: "3.7"
-      PYTHON_ARCH: "32"
-      CONDA_PY: "37"
-      CIBW_SKIP: 'cp[!3]?-* cp3[!7]-*'
+    #- PYTHON: "C:\\Python37"
+      #PYTHON_VERSION: "3.7"
+      #PYTHON_ARCH: "32"
+      #CONDA_PY: "37"
+      #CIBW_SKIP: 'cp[!3]?-* cp3[!7]-*'
 
     - PYTHON: "C:\\Python37-x64"
       PYTHON_VERSION: "3.7"
