--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ install:
   - python3 -m pip install pytest twine cibuildwheel cython numpy
   - |
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      python3 -m pip numpy>=1.16.4
+      python3 -m pip install numpy>=1.16.4
     fi
   - python3 setup.py build_ext --inplace
   - python3 -m pip install .
