- small bugfixes - added Ackley testfunction

--- a/doc/source/_theme/scipy/theme.conf
+++ b/doc/source/_theme/scipy/theme.conf
@@ -7,5 +7,5 @@ pygments_style = friendly
 edit_link = false
 rootlinks = []
 sidebar = left
-scipy_org_logo =
+pygpc_logo =
 navigation_links = true
