--- a/.travis.yml
+++ b/.travis.yml
@@ -68,10 +68,10 @@ install:
 script:
   - python3 -m pip install matplotlib
   - python3 -m pytest
-  - python3 -m cibuildwheel --output-dir wheelhouse
-  - python3 -m twine upload wheelhouse/*.whl 
-  - |
-    if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
-      python setup.py sdist
-      python -m twine upload dist/*
-    fi
+  # - python3 -m cibuildwheel --output-dir wheelhouse
+  # - python3 -m twine upload wheelhouse/*.whl 
+  # - |
+    # if [ "$TRAVIS_PYTHON_VERSION" == "3.7" ]; then
+      # python setup.py sdist
+      # python -m twine upload dist/*
+    # fi
