--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,53 @@
+language: python
+sudo: required
+
+env:
+  global:
+    - CIBW_BEFORE_BUILD="{pip} install numpy" 
+ 
 matrix:
   include:
-    - sudo: required
-      services:
-        - docker
-      env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
-           PLAT=manylinux2010_x86_64
+    - python: '3.8'
+      os: linux
+      dist: xenial
+      sudo: true
+      env: CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
+    - python: '3.7'
+      os: linux
+      dist: xenial
+      sudo: true
+      env: CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
+    - python: '3.6'
+      os: linux
+      dist: xenial
+      env: CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
+    - python: '3.5'
+      os: linux
+      dist: xenial
+      env: CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
+    - os: osx
+      language: generic
+      env:
+        - PYTHON=3.8
+        - CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
+    - os: osx
+      language: generic
+      env:
+        - PYTHON=3.7
+        - CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
+    - os: osx
+      language: generic
+      env:
+        - PYTHON=3.6
+        - CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
+    - os: osx
+      language: generic
+      env:
+        - PYTHON=3.5
+        - CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
 
 install:
-  - docker pull $DOCKER_IMAGE
+    - python3 -m pip install cibuildwheel
 
 script:
-  - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
-  - ls wheelhouse/
+    - python3 -m cibuildwheel --output-dir wheelhouse
