Edited build system

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,32 @@
-language: python
-sudo: required
-
 env:
   global:
     - CIBW_BEFORE_BUILD="pip install numpy" 
  
 matrix:
   include:
-    - python: '3.8'
+    - language: python
+      sudo: required
+      python: '3.8'
       os: linux
       dist: xenial
       sudo: true
       env: CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
-    - python: '3.7'
+    - language: python
+      sudo: required
+      python: '3.7'
       os: linux
       dist: xenial
       sudo: true
       env: CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
-    - python: '3.6'
+    - language: python
+      sudo: required
+      python: '3.6'
       os: linux
       dist: xenial
       env: CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
-    - python: '3.5'
+    - language: python
+      sudo: required
+      python: '3.5'
       os: linux
       dist: xenial
       env: CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
@@ -76,35 +81,32 @@ matrix:
     - os: windows
       language: shell
       before_install:
-        - choco install python --version 3.8.0
+        - choco install python --version 3.8.1
         - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
-      env:
-        - CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
+        - export CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
     - os: windows
       language: shell
       before_install:
-        - choco install python --version 3.7.0
+        - choco install python --version 3.7.6
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
-      env:
-        - CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
+        - export CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
     - os: windows
       language: shell
       before_install:
-        - choco install python --version 3.6.0
+        - choco install python --version 3.6.8
         - export PATH="/c/Python36:/c/Python36/Scripts:$PATH"
-      env:
-        - CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
+        - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
     - os: windows
       language: shell
       before_install:
-        - choco install python --version 3.5.0
+        - choco install python --version 3.5.4
         - export PATH="/c/Python35:/c/Python35/Scripts:$PATH"
-      env:
-        - CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
+        - export CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
 
 install:
-    - pip install cibuildwheel
+    - pip install cibuildwheel pytest
 
 script:
+    - python -m pytest 
     - python -m cibuildwheel --output-dir wheelhouse
     - ls wheelhouse/
