Edited build system

--- a/.travis.yml
+++ b/.travis.yml
@@ -105,6 +105,8 @@ matrix:
 
 install:
     - pip install cibuildwheel pytest
+    - cd pygpc
+    - pip install .
 
 script:
     - python -m pytest 
