Edited build system

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,69 +25,33 @@ matrix:
       python: '3.5'
       env: CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
     - os: osx
-      addons:
-        homebrew:
-          packages:
-            - gcc
-            - libomp
-            - pyenv
       language: generic
       env:
         - PYTHON=3.8.1
         - CC=gcc-9
         - CXX=g++-9
         - CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
-      before_install:
-          - pyenv install $PYTHON
-          - pyenv gobal $PYTHON
     - os: osx
-      addons:
-        homebrew:
-          packages:
-            - gcc
-            - libomp
-            - pyenv
       language: generic
       env:
         - PYTHON=3.7.6
         - CC=gcc-9
         - CXX=g++-9
         - CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
-      before_install:
-          - pyenv install $PYTHON
-          - pyenv gobal $PYTHON
     - os: osx
-      addons:
-        homebrew:
-          packages:
-            - gcc
-            - libomp
-            - pyenv
       language: generic
       env:
         - PYTHON=3.6.8
         - CC=gcc-9
         - CXX=g++-9
         - CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
-      before_install:
-          - pyenv install $PYTHON
-          - pyenv gobal $PYTHON
     - os: osx
-      addons:
-        homebrew:
-          packages:
-            - gcc
-            - libomp
-            - pyenv
       language: generic
       env:
         - PYTHON=3.5.4
         - CC=gcc-9
         - CXX=g++-9
         - CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
-      before_install:
-          - pyenv install $PYTHON
-          - pyenv gobal $PYTHON
     - os: windows
       language: shell
       before_install:
@@ -113,8 +77,33 @@ matrix:
         - export PATH="/c/Python35:/c/Python35/Scripts:$PATH"
         - export CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
 
+before_install: |
+  # macOSX CI environment configuration: https://pythonhosted.org/CodeChat/.travis.yml.html
+  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    brew update
+    # Per the `pyenv homebrew recommendations <https://github.com/yyuu/pyenv/wiki#suggested-build-environment>`_.
+    brew install openssl readline gcc libomp
+    brew upgrade numpy
+    # See https://docs.travis-ci.com/user/osx-ci-environment/#A-note-on-upgrading-packages.
+    # I didn't do this above because it works and I'm lazy.
+    brew outdated pyenv || brew upgrade pyenv
+    # virtualenv doesn't work without pyenv knowledge. venv in Python 3.3
+    # doesn't provide Pip by default. So, use `pyenv-virtualenv <https://github.com/yyuu/pyenv-virtualenv/blob/master/README.md>`_.
+    brew install pyenv-virtualenv
+    pyenv install $PYTHON
+    # I would expect something like ``pyenv init; pyenv local $PYTHON`` or
+    # ``pyenv shell $PYTHON`` would work, but ``pyenv init`` doesn't seem to
+    # modify the Bash environment. ??? So, I hand-set the variables instead.
+    export PYENV_VERSION=$PYTHON
+    export PATH="/Users/travis/.pyenv/shims:${PATH}"
+    pyenv-virtualenv venv
+    source venv/bin/activate
+    # A manual check that the correct version of Python is running.
+    python --version
+  fi
+
 install:
-    - python -m pip install cibuildwheel Cython numpy
+    - python -m pip install cibuildwheel twine Cython numpy
     - python -m pip install .
 
 script:
