--- a/.travis.yml
+++ b/.travis.yml
@@ -104,12 +104,12 @@ before_install: |
 
 install:
   if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-    - python3 -m pip install cibuildwheel twine Cython numpy
-    - python3 -m pip install .
-  else
-    - python -m pip install cibuildwheel twine Cython numpy
-    - python -m pip install .
-  fi
+        python3 -m pip install cibuildwheel twine Cython numpy;
+        python3 -m pip install .;
+    else
+        python -m pip install cibuildwheel twine Cython numpy;
+        python -m pip install .;
+    fi
 
 script:
     - python -m unittest 
